<resources>
    <string name="app_name">AO Remote</string>
    <string name="no_connection">Couldn\'t connect to ESP server</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="power">Power</string>
    <string name="home">Home</string>
    <string name="input_source">Input source</string>
    <string name="menu">Menu</string>
    <string name="numeric_buttons">Numeric</string>
    <string name="back">Back</string>
    <string name="more">More</string>
    <string name="channel">Channel</string>
    <string name="volume">Volume</string>
    <string name="mute">Mute</string>
    <string name="timer">Timer</string>
    <string name="sleep">Sleep</string>
    <string name="mode">Mode</string>
    <string name="speed">Speed</string>
    <string name="direction">Direction</string>
    <string name="swing">Swing</string>
    <string name="temp">Temp</string>
    <string name="tv">TV</string>
    <string name="fan">Fan</string>
    <string name="ac">AC</string>
    <string name="projector">Projector</string>
    <string name="tv_box">TV Box</string>
    <string name="add_device">Add Device</string>
    <string name="empty_devices_list_info">No device add yet.\nAdd new device to begin</string>
    <string name="view_not_find_error">Not implement yet!</string>
    <string name="remoteId">remote id</string>
    <string name="channel_up">Channel Up</string>
    <string name="channel_down">Channel Down</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="from_template">From template</string>
    <string name="manual">Manual</string>
    <string name="remote_type">remote type</string>
    <string name="brand_name">brand name</string>
    <string name="rename_device">Rename device</string>
    <string name="device_name">Device name</string>
    <string name="save">Save</string>

    <string name="remote_power_test">Power Toggle</string>
    <string name="select_device_type">Select device type</string>

    <!--    TV remote button tag -->
    <string name="tv_power">Power Toggle</string>
    <string name="tv_input_source">Input Source</string>
    <string name="tv_home">Home</string>
    <string name="tv_menu">Menu</string>
    <string name="tv_numeric">Numeric</string>
    <string name="tv_back">Back</string>
    <string name="tv_channel_up">Channel Up</string>
    <string name="tv_channel_down">Channel Down</string>
    <string name="tv_volume_up">Volume Up</string>
    <string name="tv_volume_down">Volume Down</string>
    <string name="tv_mute_toggle">Mute Toggle</string>
    <string name="tv_cursor_up">Cursor Up</string>
    <string name="tv_cursor_down">Cursor Down</string>
    <string name="tv_cursor_left">Cursor Left</string>
    <string name="tv_cursor_right">Cursor Right</string>
    <string name="tv_ok">OK</string>
    <string name="tv_more">More</string>
    <string name="tv_digit_0">Digit 0</string>
    <string name="tv_digit_1">Digit 1</string>
    <string name="tv_digit_2">Digit 2</string>
    <string name="tv_digit_3">Digit 3</string>
    <string name="tv_digit_4">Digit 4</string>
    <string name="tv_digit_5">Digit 5</string>
    <string name="tv_digit_6">Digit 6</string>
    <string name="tv_digit_7">Digit 7</string>
    <string name="tv_digit_8">Digit 8</string>
    <string name="tv_digit_9">Digit 9</string>
    <string name="tv_digit_separator">Digit Separator</string>

    <!--    AC remote button tag -->
    <string name="ac_power">Power Toggle</string>
    <string name="ac_mode">Mode</string>
    <string name="ac_speed">Speed</string>
    <string name="ac_direction">Direction</string>
    <string name="ac_swing">Swing</string>
    <string name="ac_temp_up">Temp Up</string>
    <string name="ac_temp_down">Temp Down</string>
    <string name="ac_timer">Timer</string>
    <string name="ac_sleep">Sleep</string>
    <string name="ac_more">More</string>

    <!--    Fan remote button tag  -->
    <string name="fan_power">Power</string>
    <string name="fan_timer">Timer</string>
    <string name="fan_speed">Speed</string>
    <string name="fan_wind_mode">Wind Mode</string>

    <!--    Projector button tag -->
    <string name="projector_ok">OK</string>
    <string name="projector_cursor_up">Cursor Up</string>
    <string name="projector_cursor_down">Cursor Down</string>
    <string name="projector_cursor_left">Cursor Left</string>
    <string name="projector_cursor_right">Cursor Right</string>
    <string name="projector_power">Power Toggle</string>
    <string name="projector_back">Back</string>
    <string name="projector_more">More</string>
    <string name="projector_menu">Menu</string>
    <string name="projector_volume_up">Volume Up</string>
    <string name="projector_volume_down">Volume Down</string>

    <!--    Tv box tag -->
    <item name="ir_data" type="id" />
    <string name="title_activity_settings">Settings</string>

    <string name="default_server_ip">192.168.48.11</string>
    <string name="default_server_port">1612</string>
    <string name="complete">Complete</string>

    <string name="waiting_ir_signal_state">Waiting for IR signal</string>
    <string name="received_ir_signal_state">What button has pressed?</string>
    <string name="timeout_waiting_ir_state">Timeout - Press to listen again</string>
</resources>
