<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:alpha="0.2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/air_conditioner" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_remote_button_size"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_power"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/power"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btn_mode"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/mode" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_remote_button_size"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_speed"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/speed" />

        <Button
            android:id="@+id/btn_direction"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/direction" />

        <Button
            android:id="@+id/btn_swing"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/swing" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_remote_button_size"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_temp_down"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/round_remove_black_24dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/temp" />

        <ImageButton
            android:id="@+id/btn_temp_up"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/round_add_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ac_remote_button_size"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_timer"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/timer" />

        <Button
            android:id="@+id/btn_sleep"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/sleep" />

        <Button
            android:id="@+id/btn_more"
            style="@style/MyButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/more" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>